--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 
 # Created by https://www.gitignore.io/api/images,windows
 # Edit at https://www.gitignore.io/?templates=images,windows
-
+appJar.zip
+appJar
 ### Images ###
 # JPEG
 *.jpg
